 classDiagram
    class Scooter {
        +string station
        +User user
        +int serial
        +static int nextSerial
        +int charge
        +boolean isBroken
        +Scooter(string station)
        +rent(User user)
        +dock(string station)
        +recharge()
        +requestRepair()
    }

    class User {
        +string username
        +string password
        +int age
        +boolean loggedIn
        +User(string username, string password, int age)
        +login(string password)
        +logout()
    }

    class ScooterApp {
        +object stations
        +object registeredUsers
        +ScooterApp()
        +registerUser(string username, string password, int age)
        +loginUser(string username, string password)
        +logoutUser(string username)
        +createScooter(string station)
        +dockScooter(Scooter scooter, string station)
        +rentScooter(Scooter scooter, User user)
        +print()
    }

    ScooterApp --> "0..*" Scooter : manages
    ScooterApp --> "0..*" User : manages
    Scooter --> User : checked out by
